# cryptocurrency

./: .gitignore  pyproject.toml
documentation/: postgresql.md
documentation/my-notes/: postgresql.md  task-scheduler.md  virtual-env-setup.md
upstream/: createTables.py  functions.py  getInsert_historicalCoinData.py  getInsert_recentCoinData.py  getInsert_topCoinsInfo.py  get_current_data.py  get_historical_data.py  get_top_coins_info.py  insert_pchange.py  pChange.py
upstream/functions/: connect_to_db.py  import_top_coins.py  insert_coin_data.py  pull_data.py
upstream/sql/: make_table_coin_data.sql  make_table_pchange.sql  make_table_top_coins_info.sql
